change heading color

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         h1 {
             font-size: 4rem;
-            color: #333;
+            color: #cc0909;
         }
     </style>
 </head>
