ADDED : This is the first about page trial

--- a/src/About/about.html
+++ b/src/About/about.html
@@ -3,9 +3,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>wild honey uganda</title>
+    <style>
+        body {
+            background-color: #FFCC00;
+            color: black;
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            max-width: 800px;
+            margin: 50px auto;
+            background-color: #000;
+            color: #FFCC00;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
+        }
+        h1 {
+            font-size: 2.5em;
+        }
+        p {
+            font-size: 1.2em;
+            line-height: 1.6;
+        }
+        .image-gallery {
+            margin-top: 20px;
+        }
+        .image-gallery img {
+            width: 200%;
+            max-width: 200px;
+            border-radius: 100px;
+            margin: 10px 0;
+        }
+        .sidebar {
+            width: 150px;
+            background-color: black;
+            color: #FFCC00;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 20px;
+            height: 10vh;
+        }
+        .sidebar img {
+            max-width: 100%;
+            height: auto;
+        }
+            
+    </style>
 </head>
 <body>
-    
+    <div class="sidebar">
+        <img src="images\lg.png" alt="Bee Logo">
+    </div>
+    <div class="container">
+        <h1>BEE KEEPING IN UGANDA IS CHANGING LEARN MORE</h1>
+        <p>Beekeeping in Uganda is a thriving industry that provides both economic and environmental benefits. With the country’s rich biodiversity, bees produce high-quality honey while also playing a crucial role in pollination, boosting agricultural yields. Many farmers are embracing beekeeping as a low-cost, sustainable source of income, especially in rural areas. As demand for organic honey grows, Uganda’s beekeepers have a great opportunity to expand their businesses and improve their livelihoods.
+        </p>
+        <p></p>
+        <div class="image-gallery">
+            <h2>View the images of a transforming industry in a developing country.</h2>
+            <img src="..\..\images\IMG-20250219-WA0091.jpg">
+            <img src="..\..\images\IMG-20250219-WA0092.jpg">
+            <img src="..\..\images\IMG-20250219-WA0089.jpg">
+        </div>
+        <p>"Experience the pure, rich taste of Uganda’s wild honey—100% natural, packed with nutrients, and harvested sustainably to support local beekeepers!"</p>
+
 </body>
 </html>
