This is the initial first page

--- a/src/About/about.html
+++ b/src/About/about.html
@@ -3,74 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>wild honey uganda</title>
-    <style>
-        body {
-            background-color: #FFCC00;
-            color: black;
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin: 0;
-            padding: 0;
-        }
-        .container {
-            max-width: 800px;
-            margin: 50px auto;
-            background-color: #000;
-            color: #FFCC00;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
-        }
-        h1 {
-            font-size: 2.5em;
-        }
-        p {
-            font-size: 1.2em;
-            line-height: 1.6;
-        }
-        .image-gallery {
-            margin-top: 20px;
-        }
-        .image-gallery img {
-            width: 200%;
-            max-width: 200px;
-            border-radius: 100px;
-            margin: 10px 0;
-        }
-        .sidebar {
-            width: 150px;
-            background-color: black;
-            color: #FFCC00;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            padding: 20px;
-            height: 10vh;
-        }
-        .sidebar img {
-            max-width: 100%;
-            height: auto;
-        }
-            
-    </style>
+    <title>Wild Bees Uganda - About Us</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="sidebar">
-        <img src="images\lg.png" alt="Bee Logo">
-    </div>
-    <div class="container">
-        <h1>BEE KEEPING IN UGANDA IS CHANGING LEARN MORE</h1>
-        <p>Beekeeping in Uganda is a thriving industry that provides both economic and environmental benefits. With the country’s rich biodiversity, bees produce high-quality honey while also playing a crucial role in pollination, boosting agricultural yields. Many farmers are embracing beekeeping as a low-cost, sustainable source of income, especially in rural areas. As demand for organic honey grows, Uganda’s beekeepers have a great opportunity to expand their businesses and improve their livelihoods.
-        </p>
-        <p></p>
-        <div class="image-gallery">
-            <h2>View the images of a transforming industry in a developing country.</h2>
-            <img src="..\..\images\IMG-20250219-WA0091.jpg">
-            <img src="..\..\images\IMG-20250219-WA0092.jpg">
-            <img src="..\..\images\IMG-20250219-WA0089.jpg">
-        </div>
-        <p>"Experience the pure, rich taste of Uganda’s wild honey—100% natural, packed with nutrients, and harvested sustainably to support local beekeepers!"</p>
+    <header>
+        <h1>Wild Bees Uganda</h1>
+        <nav>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#mission">Mission</a></li>
+                <li><a href="#vision">Vision</a></li>
+                <li><a href="#impact">Impact</a></li>
+                <li><a href="#join">Join Us</a></li>
+            </ul>
+        </nav>
+    </header>
 
+    <section id="about">
+        <h2>About Us</h2>
+        <p>At Wild Bees Uganda, we are more than beekeepers. We are bee stewards, environmental guardians, and economic changemakers. In a world facing climate change, biodiversity loss, and rural economic struggles, we take action. Beekeeping is not just about honey; it is a powerful tool for regenerating ecosystems, strengthening rural economies, and fostering climate resilience.</p>
+    </section>
+
+    <section id="mission">
+        <h2>Our Mission</h2>
+        <p>To lead sustainable beekeeping, apiculture tourism, and community-driven economic growth as forces for biodiversity conservation, climate adaptation, and financial empowerment ensuring that future generations inherit a thriving planet.</p>
+    </section>
+
+    <section id="vision">
+        <h2>Our Vision</h2>
+        <p>A world where bee stewardship, sustainable product innovation, and apiculture tourism drive environmental restoration and economic resilience, with thriving pollinator populations sustaining biodiversity, food security, and community livelihoods.</p>
+    </section>
+
+    <section id="approach">
+        <h2>Our Approach</h2>
+        <h3>Restoring Nature</h3>
+        <p>Beekeeping is a proven solution to environmental degradation. Our activities support pollination, restore degraded landscapes, and enhance biodiversity, ensuring resilient ecosystems.</p>
+
+        <h3>Empowering Generations</h3>
+        <p>We train beekeepers and engage schools to educate the next generation of bee stewards, equipping them with the knowledge to combat climate change and promote sustainability.</p>
+
+        <h3>Building Economic Resilience</h3>
+        <p>We equip beekeeper families, schools, and communities with sustainable beekeeping skills, creating alternative income streams that support livelihoods while preserving natural habitats.</p>
+
+        <h3>Apiculture Tourism</h3>
+        <p>We introduce visitors to the fascinating world of bees through immersive beekeeping experiences, honey harvesting tours, and eco-tourism adventures.</p>
+    </section>
+
+    <section id="impact">
+        <h2>Our Impact</h2>
+        <ul>
+            <li>Training and empowering 5,000 beekeepers in sustainable apiculture.</li>
+            <li>Restoring over 1 million pollinator-friendly trees to regenerate biodiversity.</li>
+            <li>Educating thousands of children and communities on climate action through beekeeping.</li>
+            <li>Strengthening local economies by integrating beekeeping into sustainable agriculture, livelihoods, and eco-tourism.</li>
+            <li>Positioning Uganda as a leading destination for apiculture tourism.</li>
+        </ul>
+    </section>
+
+    <section id="join">
+        <h2>Join the Movement</h2>
+        <p>Bee stewardship is a responsibility, and apiculture tourism is an opportunity. Whether you are an investor, a partner, an advocate, or a consumer choosing ethical products, you have a role in protecting bees, restoring nature, and driving sustainable development.</p>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 Wild Bees Uganda. All Rights Reserved.</p>
+    </footer>
 </body>
 </html>
