--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <li><a href="#">Order</a></li>
                     <li><a href="#">About</a></li>
                 </ul>
-                <box-icon name='user' color='#ffb238' ></box-icon>
+                <a href="#" id="login-icon"><box-icon name='user' color='#ffb238' ></box-icon></a>
             </nav>
             <section class="headings">
                 <h1>Bee happy , Bee healthy</h1>
@@ -36,13 +36,13 @@
                 <a href="#">Learn more</a>
             </section>
         </header>
-
     </div>
     <main>
-        
+        <section class="j"
     </main>
     <footer>
     </footer>
+    <script src="index.js"></script>
 </body>
 </html>
 
